# stsci.imagestats

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  RECON-INFO  defsetup.py  imagestats.wpr  new_setup.cfg  new_setup.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  devdeps.yml
docs/: conf.py  environment.yml  index.rst  make.bat  rtd-pip-requirements.txt
docs/_static/css/: custom.css
docs/exts/: numfig.py
docs/source/: LICENSE.rst  conf.py  histogram1d.rst  imagestats.rst  index.rst
lib/: __init__.py  histogram1d.py
lib/stsci/imagestats/: __init__.py  histogram1d.py
src/: buildHistogram.c  computeMean.c
stsci/imagestats/: __init__.py  histogram1d.py
stsci/imagestats/test/: test_imagestats.py
stsci/imagestats/tests/: conftest.py  test_histogram1d.py  test_imagestats.py
trunk/: setup.py
trunk/docs/source/: conf.py  index.rst
trunk/src/: buildHistogram.c  computeMean.c
