[project]
name = "stsci.imagestats"
description = "Compute sigma-clipped statistics on data arrays"
requires-python = ">=3.9"
authors = [
    { name = "Warren Hack" },
    { name = "Christopher Hanley" },
]
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 7 - Inactive",
]
dependencies = [
    "numpy>=1.22",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/spacetelescope/stsci.imagestats"
Tracker = "https://github.com/spacetelescope/stsci.imagestats/issues"
Documentation = "https://stsciimagestats.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/spacetelescope/stsci.imagestats"

[project.optional-dependencies]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "graphviz",
    "tomli; python_version < '3.11'",
]
test = [
    "pytest>=6.0",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.6",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools_scm]
write_to = "stsci/imagestats/_version.py"

[tool.coverage.run]
omit = [
    "stsci/imagestats/_version.py",
    "stsci/imagestats/tests/*.py",
    "_version.py",
    "tests/*.py",
    "*/stsci/imagestats/_version.py",
    "*/stsci/imagestats/tests/*.py",
    "*/_version.py",
    "*/tests/*.py",
]
