[metadata]
name = stsci.imagestats

# version is the *next* version to be release, with .dev at the end if it is not final
version = 1.4.dev
vdate = 11-Dec-2009


author = Warren Hack, Christopher Hanley
author-email = help@stsci.edu
summary = Compute various useful statistical values for array objects
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    numpy (>=1.5.1)

[files]
packages_root = lib
packages =
    stsci
    stsci.imagestats

[extension=stsci.imagestats.buildHistogram]
sources = src/buildHistogram.c
include_dirs = numpy

[extension=stsci.imagestats.computeMean]
sources = src/computeMean.c
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
commands = stsci.distutils.command.easier_install.easier_install
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

