[metadata]
name = stsci.imagestats
description = Compute sigma-clipped statistics on data arrays
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Warren Hack, Christopher Hanley
author_email = help@stsci.edu
license = BSD-3-Clause
url = https://github.com/spacetelescope/stsci.imagestats
project_urls =
    Tracker = https://github.com/spacetelescope/stsci.imagestats/issues
    Documentation = https://stsciimagestats.readthedocs.io/en/stable/
    Source Code = https://github.com/spacetelescope/stsci.imagestats
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 7 - Inactive

[options]
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.14
packages = find:
namespace_packages =
    stsci

[options.extras_require]
docs =
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme

[build-sphinx]
source-dir=docs
build-dir=docs
all_files=1

[upload_docs]
upload-dir=docs/_build/html
show-response=1

[pep8]
select=E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902,E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902,E201,E202,E203,E211,E221,E222,E223,E224,E225,E226,E227,E228,E231,E241,E242,E251,E271,E272,E273,E274
exclude=extern,sphinx,*parsetab.py
